--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,17 +1,26 @@
-name: Spring Petclinic CI/CD Pipeline 
-on: 
-  push: 
+name: Spring Petclinic CI/CD Pipeline
+
+on:
+  push:
     branches:
-      - 'main'
-      - 'master'
-env: 
+      - main
+      - master
+  pull_request:
+    branches:
+      - main
+      - master
+  workflow_dispatch:
+
+env:
   DOCKER_IMAGE: docker.io/vinothbalakrish/petclinic-githubci
   JAVA_VERSION: '25'
-  JAVA_DISTRIBUTION: 'temurin' 
+  JAVA_DISTRIBUTION: 'temurin'
 
 jobs:
-  build-and-test: 
-    runs-on: aws-ec2-runner 
+  build-and-test:
+    name: Build & Test
+    runs-on: [self-hosted, aws-ec2-runner]  # Use array format with labels
+    
     steps:
-      - name: Checkout Code 
-        uses: actions/checkout@v5
+    - name: Checkout code
+      uses: actions/checkout@v4
