--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,14 +13,23 @@ on:
 
 env:
   DOCKER_IMAGE: docker.io/vinothbalakrish/petclinic-githubci
-  JAVA_VERSION: '25'
+  JAVA_VERSION: '17'
   JAVA_DISTRIBUTION: 'temurin'
 
 jobs:
   build-and-test:
-    name: Build & Test
-    runs-on: [git]  # Use array format with labels
+    name: Build & Test with Maven
+    runs-on: [git]
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v4 
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: ${{ env.JAVA_VERSION }}
+        distribution: ${{ env.JAVA_DISTRIBUTION }}
+        cache: 'maven'
+     
+    - name: Build with Maven
+      run: ./mvnw clean package -DskipTests
