--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
         mvn -version
 
     - name: Build with Maven
-      run: mvn clean compile -e -X
+      run: mvn clean package -DskipTests
 
 
     - name: Run Tests
