--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,57 +43,57 @@ jobs:
     - name: Run Tests
       run: mvn test
     
-    - name: Upload JAR artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: petclinic-jar
-        path: target/*.jar
-        retention-days: 1
+  #   - name: Upload JAR artifact
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: petclinic-jar
+  #       path: target/*.jar
+  #       retention-days: 1
 
-  build-docker-image:
-    name: Build & Push Docker Image
-    needs: build-and-test
-    runs-on: [git]
+  # build-docker-image:
+  #   name: Build & Push Docker Image
+  #   needs: build-and-test
+  #   runs-on: [git]
     
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v4
     
-    - name: Download JAR artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: petclinic-jar
-        path: target/
+  #   - name: Download JAR artifact
+  #     uses: actions/download-artifact@v4
+  #     with:
+  #       name: petclinic-jar
+  #       path: target/
     
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v3
     
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+  #   - name: Log in to Docker Hub
+  #     uses: docker/login-action@v3
+  #     with:
+  #       username: ${{ secrets.DOCKER_USERNAME }}
+  #       password: ${{ secrets.DOCKER_PASSWORD }}
     
-    - name: Extract metadata for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.DOCKER_IMAGE }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
+  #   - name: Extract metadata for Docker
+  #     id: meta
+  #     uses: docker/metadata-action@v5
+  #     with:
+  #       images: ${{ env.DOCKER_IMAGE }}
+  #       tags: |
+  #         type=ref,event=branch
+  #         type=ref,event=pr
+  #         type=sha,prefix={{branch}}-
+  #         type=raw,value=latest,enable={{is_default_branch}}
     
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=registry,ref=${{ env.DOCKER_IMAGE }}:buildcache
-        cache-to: type=registry,ref=${{ env.DOCKER_IMAGE }}:buildcache,mode=max
+  #   - name: Build and push Docker image
+  #     uses: docker/build-push-action@v5
+  #     with:
+  #       context: .
+  #       push: true
+  #       tags: ${{ steps.meta.outputs.tags }}
+  #       labels: ${{ steps.meta.outputs.labels }}
+  #       cache-from: type=registry,ref=${{ env.DOCKER_IMAGE }}:buildcache
+  #       cache-to: type=registry,ref=${{ env.DOCKER_IMAGE }}:buildcache,mode=max
     
-    - name: Image digest
-      run: echo "Image pushed with digest ${{ steps.meta.outputs.tags }}"
+  #   - name: Image digest
+  #     run: echo "Image pushed with digest ${{ steps.meta.outputs.tags }}"
