--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,11 +31,11 @@ jobs:
         distribution: ${{ env.JAVA_DISTRIBUTION }}
         cache: 'maven'
     
-    # - name: Verify Java Version
-    #   run: |
-    #     echo "JAVA_HOME: $JAVA_HOME"
-    #     java -version
-    #     mvn -version
+    - name: Verify Java Version
+      run: |
+        echo "JAVA_HOME: $JAVA_HOME"
+        java -version
+        mvn -version
     
     - name: Build with Maven
       run: mvn clean package -DskipTests
