--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,17 +31,17 @@ jobs:
         distribution: ${{ env.JAVA_DISTRIBUTION }}
         cache: 'maven'
     
-    - name: Verify Java Version
-      run: |
-        echo "JAVA_HOME: $JAVA_HOME"
-        java -version
-        mvn -version
+    # - name: Verify Java Version
+    #   run: |
+    #     echo "JAVA_HOME: $JAVA_HOME"
+    #     java -version
+    #     mvn -version
     
     - name: Build with Maven
       run: mvn clean package -DskipTests
     
-    - name: Run Tests
-      run: mvn test
+    # - name: Run Tests
+    #   run: mvn test
     
   #   - name: Upload JAR artifact
   #     uses: actions/upload-artifact@v4
