--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,12 +43,12 @@ jobs:
     # - name: Run Tests
     #   run: mvn test
     
-  #   - name: Upload JAR artifact
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: petclinic-jar
-  #       path: target/*.jar
-  #       retention-days: 1
+    - name: Upload JAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: petclinic-jar
+        path: target/*.jar
+        retention-days: 1
 
   # build-docker-image:
   #   name: Build & Push Docker Image
