--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,20 +50,20 @@ jobs:
         path: target/*.jar
         retention-days: 1
 
-  # build-docker-image:
-  #   name: Build & Push Docker Image
-  #   needs: build-and-test
-  #   runs-on: [git]
+  build-docker-image:
+    name: Build & Push Docker Image
+    needs: build-and-test
+    runs-on: [git]
     
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v4
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
     
-  #   - name: Download JAR artifact
-  #     uses: actions/download-artifact@v4
-  #     with:
-  #       name: petclinic-jar
-  #       path: target/
+    - name: Download JAR artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: petclinic-jar
+        path: target/
     
   #   - name: Set up Docker Buildx
   #     uses: docker/setup-buildx-action@v3
