--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,8 +59,8 @@ jobs:
     - name: Build with Maven
       run: mvn clean package -DskipTests
     
-    # - name: Run Tests
-    #   run: mvn test
+    - name: Run Tests
+      run: mvn test
     
     - name: Upload JAR artifact
       uses: actions/upload-artifact@v4
